# Chain-of-Extraction

./: .env.example  .gitignore  README.md  demo_config.json  pyproject.toml  requirements.txt  sample_config.json  test_implementation.py
docs/: TECHNICAL_DOCS.md
examples/: README.md  multilingual_config.json  ocr_only_config.json  simple_demo.py  usage_example.py
src/chain_of_extraction/: __init__.py  main.py
src/chain_of_extraction/config/: __init__.py  settings.py
src/chain_of_extraction/models/: __init__.py  document_models.py
src/chain_of_extraction/pipeline/: __init__.py  base.py  extraction_stage.py  ocr_stage.py  structure_stage.py  translation_stage.py
src/chain_of_extraction/services/: __init__.py  llm_service.py  ocr_service.py
tests/: __init__.py  test_basic.py
